--- a/learning_logs/20251014.md
+++ b/learning_logs/20251014.md
@@ -394,9 +394,9 @@ function Hello(props) {
 상태의 개념은 useState라는 *훅(hook) 함수*를 이용하여 만들 수 있습니다. 해당 함수는 상태의 초기값을 argument로, 두 element를 받는 *배열*을 반환합니다. 첫 번째 element는 상태의 이름이고, 두 번째 element는 상태 값을 업데이트 하는 데 이용되는 함수입니다. 그래서 userState함수의 구분은 이하와 같습니다.
 
 ```jsx
-const [state, setState] = React.userState(initialValue);
+const [state, setState] = React.useState(initialValue); // 예전 방식 React를 import할 때만 가능(React객체에서 직접 꺼내씀)
 
-const [count, setCount] = useState(0);
+const [count, setCount] = useState(0); // 최근 방식 , 구조분해(import)로 꺼내서 간결히 씀
 
 // App2.jsx 에서 가져왔습니다.
 ```
@@ -592,5 +592,3 @@ const = setCount(count+1) // 이 부분에서 1이라는 값이 count 상수에 
 console.log(count); // 결과값이 1
 
 ### 일괄처리
-
-
