--- a/learning_logs/20251022.md
+++ b/learning_logs/20251022.md
@@ -124,7 +124,7 @@ export default EditCar;
 params.row를 하게 되면 테이블 내의 각 row들을 지칭하게 됩니다.
 
 이제 우리가 고려해야 하는 부분은 브라우저 상에서 수정된 자동차 정보를 백엔드로 보내줘야 한다는 점입니다. http://localhost:8080/api/cars/{id}로 PUT 요청을 보내게 될겁니다. 링크 삭제 할 때 href 값을 가져왔었기 때문에 동일한 기능을 한다는 것을 알 수 있습니다.
-차이점이 있다면 deleCar()는 id값만 보내면 되는 반면에 updateCar()의 경우는 수정할 id값과, 수정 내용이 전달되어야 하기 때문에 매개변수 개수가 달라지겠네요. 이 부분도 backend에서의 CarController를 확인하시면 됩니다. (cardatabase4 기준입니다. 2에는 없어요.)
+차이점이 있다면 deleteCar()는 id값만 보내면 되는 반면에 updateCar()의 경우는 수정할 id값과, 수정 내용이 전달되어야 하기 때문에 매개변수 개수가 달라지겠네요. 이 부분도 backend에서의 CarController를 확인하시면 됩니다. (cardatabase4 기준입니다. 2에는 없어요.)
 여기 요청의 경우에는 내용이 필요하기 때문에 addCar()에서와 마찬가지로 'Content-Type' :'application/json' headers가 필요합니다.
 
 새로운 자료형을 정의했습니다.
